<resources>
    <string name="app_name">Synesthesia</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_sync">pref_sync</string>
    <string name="light_sensor">Light Sensor Input</string>
    <string name="light_sensor_summary">The light sensor detects the amount of light hitting the front of the device, and maps LIGHT INTENSITY to COLOR.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Username</string>
    <string name="pref_default_display_name">Anonymous User</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="stroke_list_titles">
        <item>Circle</item>
        <item>Square</item>
        <item>Triangle</item>
    </string-array>
    <string-array name="stroke_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="defaultstring">IMAGETITLE</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="community">Community</string>
    <string name="title_activity_community">Community</string>
    <string name="sensorsPref">Sensors</string>
    <string name="specialModes">Special Modes</string>
    <string name="About">About</string>
    <string name="lightSummary">Enable light sensor input to change stroke opacity.</string>
    <string name="lightTitle">Dynamic Opacity</string>
    <string name="volumeSwitch">volume_switch</string>
    <string name="volumeSummary">Enable volume detection to change stroke width.</string>
    <string name="volumeTitle">Dynamic Stroke Width</string>
    <string name="lightSwitch">light_switch</string>
    <string name="strokeType">stroke_type</string>
    <string name="username">username</string>
    <string name="strokeTitle">Stroke Type</string>
    <string name="spiralSummary">Disables gyroscopic input. Moves the paint brush in a spiral motion to and from the center automatically.</string>
    <string name="radialSummary">Disable gyroscopic input. Moves the paint brush radially outwards and inwards from the center. Rotates periodically.</string>
</resources>
